--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,9 @@ hiltNavigationCompose = "1.2.0"
 # Coroutines
 coroutines = "1.10.2"
 
+# DataStore
+datastore = "1.1.6"
+
 # JavaX Inject (for pure domain module)
 javaxInject = "1"
 
@@ -68,6 +71,9 @@ hilt-android-testing = { group = "com.google.dagger", name = "hilt-android-testi
 kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "coroutines" }
 kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutines" }
 kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "coroutines" }
+
+# DataStore
+androidx-datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastore" }
 
 # JavaX Inject
 javax-inject = { group = "javax.inject", name = "javax.inject", version.ref = "javaxInject" }
