chore(app, core-network): configure network and BASE_URL from local.properties
- Add INTERNET permission to AndroidManifest
- Add networkSecurityConfig reference to AndroidManifest
- Read BASE_URL from local.properties to keep server address out of git
- Add network_security_config.xml to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,8 @@
 .cxx
 local.properties
 
+# Network security config (contains server IP)
+app/src/main/res/xml/network_security_config.xml
+
 # Screenshots (design reference)
 screenshot/
